--- a/lab3/cal.css
+++ b/lab3/cal.css
@@ -9,9 +9,9 @@
 }
 
 #result {
-    width: 100%; /* Set the width as needed */
-    height: 40px; /* Set the height as needed */
-    font-size: 16px; /* Adjust the font size as needed */
+    width: 100%;
+    height: 40px;
+    font-size: 16px;
 }
 
 input {
